# fcm-example

./: compose.yaml
.devcontainer/backend/: Dockerfile  devcontainer.json
.devcontainer/frontend/: Dockerfile  devcontainer.json
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: app.rs  extractors.rs  handlers.rs  main.rs  services.rs
backend/src/app/: fcm_send.rs
backend/src/app/fcm_send/: fcm_client.rs
backend/src/app/fcm_send/fcm_client/: send.rs
backend/src/handlers/: admin_notifications.rs  admin_tokens.rs  assets.rs  notifications.rs  tokens.rs
frontend/: .gitignore  README.md  _env  biome.json  index.html  manifest.json  package-lock.json  package.json  vite.config.ts
frontend/public/: firebase-messaging-sw.js
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
