[package]
name = "backend"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.7.9", features = ["macros"] }
futures = "0.3.31"
google-cloud-auth = { version = "0.17.2", default-features = false, features = ["rustls-tls"] }
google-cloud-token = "0.1.2"
hex = "0.4.3"
rand = "0.8.5"
reqwest = { version = "0.12.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
